# III-Drone-Supervision

./: README.md  package.xml  setup.cfg  setup.py
docs/: architecture.md  operator-flows.md
iii_drone_supervision/: __init__.py  managed_node_client.py  managed_node_wrapper.py  managed_process.py  process_management_configuration.py  service_manager.py  supervisor.py  supervisor_node.py  system_daemon.py  system_manager.py  system_spec.py  tmux_spec.py
launch/: system.launch.py
node_management_config/: cable_camera.yaml  micro_ros_agent.yaml  sensors_real_launch.yaml  sensors_sim_launch.yaml  tf_real_launch.yaml  tf_sim_launch.yaml
resource/: iii_drone_supervision
supervision_config/: opti_track.yaml  real.yaml  sim.yaml
test/: test_managed_node_client.py  test_managed_node_wrapper.py  test_service_manager.py  test_supervision_logic.py  test_system_daemon.py  test_system_manager.py  test_system_spec.py
